--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-libjlargearrays-java (1.6-1) UNRELEASED; urgency=medium
+libjlargearrays-java (1.6-1) unstable; urgency=medium
 
   * Initial release (Closes: #867920)
 
- -- Carnë Draug <carandraug+dev@gmail.com>  Mon, 10 Jul 2017 16:12:40 +0100
+ -- Carnë Draug <carandraug+dev@gmail.com>  Fri, 08 Sep 2017 15:40:46 +0100
